--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nuxt --hostname 0.0.0.0 --port 8000",
     "build": "nuxt build",
-    "start": "nuxt start",
+    "start": "nuxt start --hostname 0.0.0.0 --port 8000",
     "generate": "nuxt generate"
   },
   "dependencies": {
